2014-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Make sure that libtiff warnings
	are promoted to errors for critical tags.

2014-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Be quite a lot more draconian
	when retrieving the baseline standard TIFF tags we need in order
	to avoid consuming uninitalized data later.  An error with these
	tags will result in failure to read the image file.

2014-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.c: Decided that ThresholdBlackNegateQuantumOp
	and ThresholdWhiteNegateQuantumOp should set the result to white
	or black respectively rather than being based on subtraction.

2014-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Be ultra-pedantic with CPPFLAGS
	and include paths in order to assure that only required
	directories are supplied, and to avoid accidential collision with
	system header files.

2014-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.h ("C"): New quantum operators
	ThresholdBlackNegateQuantumOp and ThresholdWhiteNegateQuantumOp.
	These correspond to -operator "Threshold-Black-Negate" and
	"Threshold-White-Negate".

2014-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (MultiplyCompositePixels): Multiply
	composition now uses SVG interpretation of how alpha should be
	handled.  No longer does a simple multiply of alpha channel.
	Behavior change.  Patch contributed by Sara Shafaei.

	* coders/msl.c (ProcessMSLScript): Deal with case where
	image_info->attributes is NULL.

2014-04-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (TranslateTextEx): Support additional format
	specifiers 'g', 'A', 'C', 'D', 'G', 'H', 'M', 'O', 'P', 'Q', 'T',
	'U', 'W', 'X', and '@'.
	(GetMagickGeometry): Support '>' and '<' qualifiers with '@'